--- a/src/Msp/FrontendBundle/Resources/views/Page/college_sixieme.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/college_sixieme.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspFrontendBundle::layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}Accueil | {{ parent() }}{% endblock %}
+{% block title %}COLLÈGE 6ième | {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,12 +10,13 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}Accueil | {{ parent() }}{% endblock %}
+{% block entetetitle %}COLLÈGE 6<sup>ième</sup> | {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 {# Le contenu de la page #}
 {% block content %}
     <article class="span8">
-        <h1>Accueil - MathSup</h1>
+        <h1>COLLÈGE 6<sup>ième</sup></h1>
     </article>    
-{% endblock %}
+{% endblock %}{# empty Twig template #}
+{# empty Twig template #}
