--- a/src/Msp/FrontendBundle/Resources/views/Page/faq.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/faq.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspFrontendBundle::layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}Accueil | {{ parent() }}{% endblock %}
+{% block title %}FAQ | {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,12 +10,12 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}Accueil | {{ parent() }}{% endblock %}
+{% block entetetitle %}FAQ | {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 {# Le contenu de la page #}
 {% block content %}
     <article class="span8">
-        <h1>Accueil - MathSup</h1>
+        <h1>FAQ</h1>
     </article>    
 {% endblock %}
