--- a/src/Msp/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Security/login.html.twig
@@ -1,21 +1,35 @@
 {% extends "MspFrontendBundle::layout.html.twig" %}
 
-{% block content %}
+{# Le titre de la page (defaut MathSup) #}
+{% block title %}LOGIN | {{ parent() }}{% endblock %}
+{# La description de la page (defaut vide) #}
+{% block description %}{% endblock %}
+{# Les mots clés de la page (defaut vide) #}
+{% block keywords %}{% endblock %}
+{# Indication pour les robots de la page  (defaut all) #}
+{% block robots %}noindex, nofollow{% endblock %}
 
+{# Le titre de l'entête du document #}
+{% block entetetitle %}CGS | {{ parent() }}{% endblock %}
+{# La barre latéralke de la page #}
+{% block aside %}{{ parent() }}{% endblock %}
+
+{% block content %}
+    
     {% block fos_user_content %}
     {% if error %}
-        <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
+        <div class="span8 alert alert-error">{{ error|trans({}, 'FOSUserBundle') }}</div>
     {% endif %}
 
-    <form action="{{ path("fos_user_security_check") }}" method="post">
+    <form class="span8" action="{{ path("fos_user_security_check") }}" method="post">
         <fieldset>
             <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
             <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-            <input type="text" id="username" name="_username" value="{{ last_username }}" required="required" /><br/>
+            <input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="Login" required="required" /><br/>
 
             <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-            <input type="password" id="password" name="_password" required="required" /><br/>
+            <input type="password" id="password" name="_password" placeholder="Mot de passe" required="required" /><br/>
 
             <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
             <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label><br/>
