--- a/src/Msp/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,7 +1,28 @@
-{% extends "MspFrontendBundle::layout.html.twig" %}
+{% extends "MspUserBundle::layout.html.twig" %}
 
-{% block content %}
-    {% block fos_user_content %}
+{# Le titre de la page (defaut MathSup) #}
+{% block title %}INSCRIPTION | {{ parent() }}{% endblock %}
+{# La description de la page (defaut vide) #}
+{% block description %}{% endblock %}
+{# Les mots clés de la page (defaut vide) #}
+{% block keywords %}{% endblock %}
+{# Indication pour les robots de la page  (defaut all) #}
+{% block robots %}noindex, nofollow{% endblock %}
+
+{# Le titre de l'entête du document #}
+{% block entetetitle %}INSCRIPTION | {{ parent() }}{% endblock %}
+{# La barre latéralke de la page #}
+{% block aside %}{{ parent() }}{% endblock %}
+
+{% block fos_user_content %}
+
+<header>        
+    <h1>INSCRIPTION</h1>        
+</header>
+
+<div>
     {% include "FOSUserBundle:Registration:register_content.html.twig" %}
-    {% endblock fos_user_content %}
-{% endblock %}
+</div>   
+
+{% endblock fos_user_content %}
+
