--- a/src/Msp/UserBundle/Resources/views/Resetting/request.html.twig
+++ b/src/Msp/UserBundle/Resources/views/Resetting/request.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspUserBundle::layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}INSCRIPTION | {{ parent() }}{% endblock %}
+{% block title %}Mot de passe oublié | {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,19 +10,18 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}INSCRIPTION | {{ parent() }}{% endblock %}
+{% block entetetitle %}Mot de passe oublié | {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 
 {% block fos_user_content %}
 
 <header>        
-    <h1>INSCRIPTION</h1>        
+    <h1>Mot de passe oublié</h1>        
 </header>
 
 <div>
-    {% include "MspUserBundle:Registration:register_content.html.twig" %}
-</div>   
+    {% include "MspUserBundle:Resetting:request_content.html.twig" %}
+</div>
 
 {% endblock fos_user_content %}
-
