CHAPITRE NIVEAU CLASSE ETC LISTING

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -24,7 +24,7 @@
                 
                 <div class="span3">
                     <a href="{{ path('msp_frontend_homepage') }}">
-                        <img src="" alt=""/>
+                        <img src="" alt="logo"/>
                     </a>
                 </div>
                 
@@ -42,6 +42,7 @@
                             <li><a href="{{ path('msp_contact') }}">CONTACT</a></li>
                             <li><a href="{{ path('msp_math_plus') }}">MATH PLUS</a></li>
                             <li><a href="{{ path('msp_faq') }}">FAQ</a></li>
+                            <li><a href="{{ path('msp_compte') }}">COMPTE</a></li>
                         </ul>
                     </nav>
                     
