--- a/src/Msp/FrontendBundle/Resources/views/Classe/new.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Classe/new.html.twig
@@ -1,19 +1,34 @@
-{% extends '::base.html.twig' %}
+{% extends "MspFrontendBundle::user-layout.html.twig" %}
+
+{# Le titre de la page (defaut MathSup) #}
+{% block title %}AJOUT CLASSE | {{ parent() }}{% endblock %}
+{# La description de la page (defaut vide) #}
+{% block description %}{% endblock %}
+{# Les mots clés de la page (defaut vide) #}
+{% block keywords %}{% endblock %}
+{# Indication pour les robots de la page  (defaut all) #}
+{% block robots %}noindex, nofollow{% endblock %}
+
+{# Le titre de l'entête du document #}
+{% block entetetitle %}AJOUT CLASSE | {{ parent() }}{% endblock %}
+{# La barre latéralke de la page #}
+{% block aside %}{{ parent() }}{% endblock %}
+{# Le contenu de la page #}
 
 {% block body -%}
-    <h1>Classe creation</h1>
+    <h1>Ajout Classe</h1>
 
     <form action="{{ path('classe_create') }}" method="post" {{ form_enctype(form) }}>
         {{ form_widget(form) }}
         <p>
-            <button type="submit">Create</button>
+            <button class="btn btn-primary" type="submit">Ajouter</button>
         </p>
     </form>
 
-        <ul class="record_actions">
+        <ul class="inline">
     <li>
-        <a href="{{ path('classe') }}">
-            Back to the list
+        <a class="btn" href="{{ path('classe') }}">
+            <i class="icon-chevron-left"></i> Retour à la liste
         </a>
     </li>
 </ul>
