--- a/src/Msp/FrontendBundle/Resources/views/Difficulter/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Difficulter/index.html.twig
@@ -1,13 +1,29 @@
-{% extends '::base.html.twig' %}
+{% extends "MspFrontendBundle::user-layout.html.twig" %}
+
+{# Le titre de la page (defaut MathSup) #}
+{% block title %}DIFFICULTÉ | {{ parent() }}{% endblock %}
+{# La description de la page (defaut vide) #}
+{% block description %}{% endblock %}
+{# Les mots clés de la page (defaut vide) #}
+{% block keywords %}{% endblock %}
+{# Indication pour les robots de la page  (defaut all) #}
+{% block robots %}noindex, nofollow{% endblock %}
+
+{# Le titre de l'entête du document #}
+{% block entetetitle %}DIFFICULTÉ | {{ parent() }}{% endblock %}
+{# La barre latéralke de la page #}
+{% block aside %}{{ parent() }}{% endblock %}
+{# Le contenu de la page #}
 
 {% block body -%}
-    <h1>Difficulter list</h1>
+    <h1>List des Difficultés pour les QCM</h1>
 
-    <table class="records_list">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Id</th>
                 <th>Libelle</th>
+                <th>Nombre étoile</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -16,13 +32,14 @@
             <tr>
                 <td><a href="{{ path('difficulter_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.libelle }}</td>
+                <td>{{ entity.nombreEtoile }}</td>
                 <td>
-                <ul>
+                <ul class="inline">
                     <li>
-                        <a href="{{ path('difficulter_show', { 'id': entity.id }) }}">show</a>
+                        <a class="btn" href="{{ path('difficulter_show', { 'id': entity.id }) }}">Voir <i class="icon-align-justify"></i></a>
                     </li>
                     <li>
-                        <a href="{{ path('difficulter_edit', { 'id': entity.id }) }}">edit</a>
+                        <a class="btn" href="{{ path('difficulter_edit', { 'id': entity.id }) }}">Modifier <i class="icon-edit"></i></a>
                     </li>
                 </ul>
                 </td>
@@ -31,10 +48,10 @@
         </tbody>
     </table>
 
-        <ul>
+        <ul class="inline">
         <li>
-            <a href="{{ path('difficulter_new') }}">
-                Create a new entry
+            <a class="btn" href="{{ path('difficulter_new') }}">
+                Ajouter une difficulté <i class="icon-chevron-right"></i>
             </a>
         </li>
     </ul>
