--- a/src/Msp/FrontendBundle/Resources/views/Difficulter/show.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Difficulter/show.html.twig
@@ -1,9 +1,24 @@
-{% extends '::base.html.twig' %}
+{% extends "MspFrontendBundle::user-layout.html.twig" %}
+
+{# Le titre de la page (defaut MathSup) #}
+{% block title %}DIFFICULTÉ {{ entity.libelle }} | {{ parent() }}{% endblock %}
+{# La description de la page (defaut vide) #}
+{% block description %}{% endblock %}
+{# Les mots clés de la page (defaut vide) #}
+{% block keywords %}{% endblock %}
+{# Indication pour les robots de la page  (defaut all) #}
+{% block robots %}noindex, nofollow{% endblock %}
+
+{# Le titre de l'entête du document #}
+{% block entetetitle %}DIFFICULTÉ {{ entity.libelle }} | {{ parent() }}{% endblock %}
+{# La barre latéralke de la page #}
+{% block aside %}{{ parent() }}{% endblock %}
+{# Le contenu de la page #}
 
 {% block body -%}
-    <h1>Difficulter</h1>
+    <h1>Difficulté "{{ entity.libelle }}"</h1>
 
-    <table class="record_properties">
+    <table class="table table-hover">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -13,25 +28,29 @@
                 <th>Libelle</th>
                 <td>{{ entity.libelle }}</td>
             </tr>
+            <tr>
+                <th>Nombre étoile</th>
+                <td>{{ entity.nombreEtoile }}</td>
+            </tr>
         </tbody>
     </table>
 
-        <ul class="record_actions">
+        <ul class="inline">
     <li>
-        <a href="{{ path('difficulter') }}">
-            Back to the list
+        <a class="btn" href="{{ path('difficulter') }}">
+            <i class="icon-chevron-left"></i> Retour à la liste
         </a>
     </li>
     <li>
-        <a href="{{ path('difficulter_edit', { 'id': entity.id }) }}">
-            Edit
+        <a class="btn" href="{{ path('difficulter_edit', { 'id': entity.id }) }}">
+            Modifier <i class="icon-edit"></i>
         </a>
     </li>
     <li>
         <form action="{{ path('difficulter_delete', { 'id': entity.id }) }}" method="post">
             <input type="hidden" name="_method" value="DELETE" />
             {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+            <button class="btn btn-danger" type="submit">Supprimer <i class="icon-remove"></i></button>
         </form>
     </li>
 </ul>
