--- a/src/Msp/FrontendBundle/Resources/views/Niveau/edit.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Niveau/edit.html.twig
@@ -1,27 +1,42 @@
-{% extends '::base.html.twig' %}
+{% extends "MspFrontendBundle::user-layout.html.twig" %}
+
+{# Le titre de la page (defaut MathSup) #}
+{% block title %}EDITION NIVEAU "{{ entity.libelle }}"| {{ parent() }}{% endblock %}
+{# La description de la page (defaut vide) #}
+{% block description %}{% endblock %}
+{# Les mots clés de la page (defaut vide) #}
+{% block keywords %}{% endblock %}
+{# Indication pour les robots de la page  (defaut all) #}
+{% block robots %}noindex, nofollow{% endblock %}
+
+{# Le titre de l'entête du document #}
+{% block entetetitle %}EDITION NIVEAU "{{ entity.libelle }}" | {{ parent() }}{% endblock %}
+{# La barre latéralke de la page #}
+{% block aside %}{{ parent() }}{% endblock %}
+{# Le contenu de la page #}
 
 {% block body -%}
-    <h1>Niveau edit</h1>
+    <h1>EDITION NIVEAU "{{ entity.libelle }}"</h1>
 
     <form action="{{ path('niveau_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
         <input type="hidden" name="_method" value="PUT" />
         {{ form_widget(edit_form) }}
         <p>
-            <button type="submit">Edit</button>
+            <button class="btn btn-primary" type="submit">Modifier</button>
         </p>
     </form>
 
-        <ul class="record_actions">
+        <ul class="inline">
     <li>
-        <a href="{{ path('niveau') }}">
-            Back to the list
+        <a class="btn" href="{{ path('niveau') }}">
+           <i class="icon-chevron-left"></i> Retour à la liste
         </a>
     </li>
     <li>
         <form action="{{ path('niveau_delete', { 'id': entity.id }) }}" method="post">
             <input type="hidden" name="_method" value="DELETE" />
             {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+            <button class="btn btn-danger" type="submit">Supprimer <i class="icon-remove"></i></button>
         </form>
     </li>
 </ul>
