--- a/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
@@ -12,6 +12,7 @@
                 <li><a href="{{ path('chapitre') }}">CHAPITRE</a></li>
                 <li><a href="{{ path('exercicecorrige') }}">Exercices Corrigés</a></li>
                 <li><a href="{{ path('difficulter') }}">Difficulté</a></li>
+                <li><a href="{{ path('qcm') }}">Qcm</a></li>
             </ul>
         </div>
     </div>
