--- a/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
@@ -7,12 +7,15 @@
         <div class="navbar-inner">
             <ul class="nav">
                 <li class="active"><a href="{{ path('msp_compte') }}"><i class="icon-user"></i></a></li>
+                <li><a href="{{ path('cours') }}">COURS</a></li>
                 <li><a href="{{ path('niveau') }}">NIVEAU</a></li>
                 <li><a href="{{ path('classe') }}">CLASSE</a></li>
                 <li><a href="{{ path('chapitre') }}">CHAPITRE</a></li>
                 <li><a href="{{ path('exercicecorrige') }}">Exercices Corrigés</a></li>
                 <li><a href="{{ path('difficulter') }}">Difficulté</a></li>
-                <li><a href="{{ path('qcm') }}">Qcm</a></li>
+                <li><a href="{{ path('qcm') }}">QCM</a></li>
+                <li><a href="{{ path('question') }}">QUESTION</a></li>
+                <li><a href="{{ path('reponse') }}">REPONSE</a></li>
             </ul>
         </div>
     </div>
