--- a/src/Msp/FrontendBundle/Resources/views/Question/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Question/index.html.twig
@@ -1,9 +1,24 @@
-{% extends '::base.html.twig' %}
+{% extends "MspFrontendBundle::user-layout.html.twig" %}
+
+{# Le titre de la page (defaut MathSup) #}
+{% block title %}LIST QUESTION | {{ parent() }}{% endblock %}
+{# La description de la page (defaut vide) #}
+{% block description %}{% endblock %}
+{# Les mots clés de la page (defaut vide) #}
+{% block keywords %}{% endblock %}
+{# Indication pour les robots de la page  (defaut all) #}
+{% block robots %}noindex, nofollow{% endblock %}
+
+{# Le titre de l'entête du document #}
+{% block entetetitle %}LIST QUESTION | {{ parent() }}{% endblock %}
+{# La barre latéralke de la page #}
+{% block aside %}{{ parent() }}{% endblock %}
+{# Le contenu de la page #}
 
 {% block body -%}
-    <h1>Question list</h1>
+    <h1>List Question</h1>
 
-    <table class="records_list">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Id</th>
@@ -20,27 +35,27 @@
                 <td><a href="{{ path('question_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.libelle }}</td>
                 <td>{{ entity.illustration }}</td>
-                <td>{{ entity.duree }}</td>
+                <td>{{ entity.duree | date('H:i:s') }}</td>
                 <td>{% if entity.date %}{{ entity.date|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>
-                <ul>
+                <td>                    
+                <ul class="nav nav-tabs">
                     <li>
-                        <a href="{{ path('question_show', { 'id': entity.id }) }}">show</a>
+                        <a class="btn" href="{{ path('question_show', { 'id': entity.id }) }}">Voir <i class="icon-align-justify"></i></a>
                     </li>
-                    <li>
-                        <a href="{{ path('question_edit', { 'id': entity.id }) }}">edit</a>
+                    <li class="margin-left-small">
+                        <a class="btn" href="{{ path('question_edit', { 'id': entity.id }) }}">Modifier <i class="icon-edit"></i></a>
                     </li>
-                </ul>
+                </ul>                    
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-        <ul>
+        <ul class="inline">
         <li>
-            <a href="{{ path('question_new') }}">
-                Create a new entry
+            <a class="btn" href="{{ path('question_new') }}">
+                Ajouter une question <i class="icon-chevron-right"></i>
             </a>
         </li>
     </ul>
