--- a/src/Msp/FrontendBundle/Resources/views/Question/show.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Question/show.html.twig
@@ -1,9 +1,24 @@
-{% extends '::base.html.twig' %}
+{% extends "MspFrontendBundle::user-layout.html.twig" %}
+
+{# Le titre de la page (defaut MathSup) #}
+{% block title %}QUESTION {{ entity.libelle }} | {{ parent() }}{% endblock %}
+{# La description de la page (defaut vide) #}
+{% block description %}{% endblock %}
+{# Les mots clés de la page (defaut vide) #}
+{% block keywords %}{% endblock %}
+{# Indication pour les robots de la page  (defaut all) #}
+{% block robots %}noindex, nofollow{% endblock %}
+
+{# Le titre de l'entête du document #}
+{% block entetetitle %}QUESTION {{ entity.libelle }} | {{ parent() }}{% endblock %}
+{# La barre latéralke de la page #}
+{% block aside %}{{ parent() }}{% endblock %}
+{# Le contenu de la page #}
 
 {% block body -%}
-    <h1>Question</h1>
+    <h1>Question "{{ entity.libelle }}"</h1>
 
-    <table class="record_properties">
+    <table class="table table-hover">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -19,7 +34,7 @@
             </tr>
             <tr>
                 <th>Duree</th>
-                <td>{{ entity.duree }}</td>
+                <td>{{ entity.duree | date('H:i:s') }}</td>
             </tr>
             <tr>
                 <th>Date</th>
@@ -28,22 +43,22 @@
         </tbody>
     </table>
 
-        <ul class="record_actions">
+        <ul class="inline">
     <li>
-        <a href="{{ path('question') }}">
-            Back to the list
+        <a class="btn" href="{{ path('question') }}">
+            <i class="icon-chevron-left"></i> Retour à la liste
         </a>
     </li>
     <li>
-        <a href="{{ path('question_edit', { 'id': entity.id }) }}">
-            Edit
+        <a class="btn" href="{{ path('question_edit', { 'id': entity.id }) }}">
+            Modifier <i class="icon-edit"></i>
         </a>
     </li>
     <li>
         <form action="{{ path('question_delete', { 'id': entity.id }) }}" method="post">
             <input type="hidden" name="_method" value="DELETE" />
             {{ form_widget(delete_form) }}
-            <button type="submit">Delete</button>
+            <button class="btn btn-danger" type="submit">Supprimer <i class="icon-remove"></i></button>
         </form>
     </li>
 </ul>
