--- a/src/Msp/FrontendBundle/Resources/views/Reponse/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Reponse/index.html.twig
@@ -1,9 +1,24 @@
-{% extends '::base.html.twig' %}
+{% extends "MspFrontendBundle::user-layout.html.twig" %}
+
+{# Le titre de la page (defaut MathSup) #}
+{% block title %}LIST REPONSE | {{ parent() }}{% endblock %}
+{# La description de la page (defaut vide) #}
+{% block description %}{% endblock %}
+{# Les mots clés de la page (defaut vide) #}
+{% block keywords %}{% endblock %}
+{# Indication pour les robots de la page  (defaut all) #}
+{% block robots %}noindex, nofollow{% endblock %}
+
+{# Le titre de l'entête du document #}
+{% block entetetitle %}LIST REPONSE | {{ parent() }}{% endblock %}
+{# La barre latéralke de la page #}
+{% block aside %}{{ parent() }}{% endblock %}
+{# Le contenu de la page #}
 
 {% block body -%}
-    <h1>Reponse list</h1>
+    <h1>List Reponse</h1>
 
-    <table class="records_list">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Id</th>
@@ -21,12 +36,12 @@
                 <td>{{ entity.etat }}</td>
                 <td>{% if entity.date %}{{ entity.date|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>
-                <ul>
+                <ul class="inline">
                     <li>
-                        <a href="{{ path('reponse_show', { 'id': entity.id }) }}">show</a>
+                        <a class="btn" href="{{ path('reponse_show', { 'id': entity.id }) }}">Voir <i class="icon-align-justify"></i></a>
                     </li>
                     <li>
-                        <a href="{{ path('reponse_edit', { 'id': entity.id }) }}">edit</a>
+                        <a class="btn" href="{{ path('reponse_edit', { 'id': entity.id }) }}">Modifier <i class="icon-edit"></i></a>
                     </li>
                 </ul>
                 </td>
@@ -35,10 +50,10 @@
         </tbody>
     </table>
 
-        <ul>
+        <ul class="inline">
         <li>
-            <a href="{{ path('reponse_new') }}">
-                Create a new entry
+            <a class="btn" href="{{ path('reponse_new') }}">
+                Ajouter une réponse <i class="icon-chevron-right"></i>
             </a>
         </li>
     </ul>
