FORM INSCRIPTION END

--- a/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
@@ -7,6 +7,7 @@
         <div class="navbar-inner">
             <ul class="nav">
                 <li class="active"><a href="{{ path('msp_compte') }}"><i class="icon-user"></i></a></li>
+                <li><a href="{{ path('departement') }}">DEPARTEMENT</a></li>
                 <li><a href="{{ path('cours') }}">COURS</a></li>
                 <li><a href="{{ path('niveau') }}">NIVEAU</a></li>
                 <li><a href="{{ path('classe') }}">CLASSE</a></li>
