--- a/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
@@ -10,10 +10,10 @@
                 <li><a href="{{ path('departement') }}">DEPARTEMENT</a></li>
                 <li><a href="{{ path('cours') }}">COURS</a></li>
                 <li><a href="{{ path('niveau') }}">NIVEAU</a></li>
+                <li><a href="{{ path('difficulter') }}">DIFFICULTÉ</a></li>
                 <li><a href="{{ path('classe') }}">CLASSE</a></li>
                 <li><a href="{{ path('chapitre') }}">CHAPITRE</a></li>
-                <li><a href="{{ path('exercicecorrige') }}">Exercices Corrigés</a></li>
-                <li><a href="{{ path('difficulter') }}">Difficulté</a></li>
+                <li><a href="{{ path('exercicecorrige') }}">Exercices Corrigés</a></li>                
                 <li><a href="{{ path('qcm') }}">QCM</a></li>
                 <li><a href="{{ path('question') }}">QUESTION</a></li>
                 <li><a href="{{ path('reponse') }}">REPONSE</a></li>
