--- a/src/Msp/FrontendBundle/Resources/views/Departement/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Departement/index.html.twig
@@ -46,11 +46,24 @@
         </tbody>
     </table>
 
-        <ul class="inline">
+     <div class="pagination">
+        <ul>
+            {# On utilise la fonction range(a, b) qui crée un tableau de
+            valeurs entre a et b #}
+            {% for p in range(1, nb_pages) %}
+            <li{% if p == page %} class="active"{% endif %}>
+                <a href="{{ path('departement', {'page': p}) }}">{{ p }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
+    
+    <ul class="inline">
         <li>
             <a class="btn" href="{{ path('departement_new') }}">
                 Ajouter un département <i class="icon-chevron-right"></i>
             </a>
         </li>
-    </ul>
+    </ul>   
+   
     {% endblock %}
