--- a/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/user-layout.html.twig
@@ -1,20 +1,20 @@
 {% extends "::layout.html.twig" %}
 
 {% block content %}
-<section class="span8">
+<section class="span9">
     {% block navbaruser %}
     <div class="navbar">
         <div class="navbar-inner">
             <ul class="nav">
-                <li class="active"><a href="{{ path('msp_compte') }}"><i class="icon-user"></i></a></li>
+                <li class="active"><a href="{{ path('msp_admin', { slug: app.user.slug}) }}"><i class="icon-user"></i></a></li>
                 <li><a href="{{ path('departement') }}">DEPARTEMENT</a></li>
                 <li><a href="{{ path('cours') }}">COURS</a></li>
                 <li><a href="{{ path('niveau') }}">NIVEAU</a></li>
                 <li><a href="{{ path('difficulter') }}">DIFFICULTÉ</a></li>
                 <li><a href="{{ path('classe') }}">CLASSE</a></li>
                 <li><a href="{{ path('chapitre') }}">CHAPITRE</a></li>
-                <li><a href="{{ path('exercicecorrige') }}">Exercices Corrigés</a></li>                
-                <li><a href="{{ path('qcm') }}">QCM</a></li>
+                <li><a href="{{ path('exercicecorrige') }}">GESTION CORRIGÉS</a></li>                
+                <li><a href="{{ path('qcm') }}">GESTION QCM</a></li>
                 <li><a href="{{ path('question') }}">QUESTION</a></li>
                 <li><a href="{{ path('reponse') }}">REPONSE</a></li>
             </ul>
