--- a/src/Msp/FrontendBundle/Resources/views/Question/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Question/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "MspFrontendBundle::user-layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}LIST QUESTION | {{ parent() }}{% endblock %}
+{% block title %}LIST QUESTION DE "{{ qcm.libelle }}" | {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,22 +10,23 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}LIST QUESTION | {{ parent() }}{% endblock %}
+{% block entetetitle %}LIST QUESTION de "{{ qcm.libelle }}"| {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 {# Le contenu de la page #}
 
 {% block body -%}
-    <h1>List Question</h1>
+    <h1>List Question de "{{ qcm.libelle }}"</h1>
 
     <table class="table table-hover">
         <thead>
             <tr>
                 <th>Id</th>
-                <th>Libelle</th>
+                <th>Titre</th>
                 <th>Illustration</th>
-                <th>Duree</th>
+                <th>Durée</th>
                 <th>Date</th>
+                <th>Reponses</th>
                 <th>Actions</th>
             </tr>
         </thead>
@@ -36,14 +37,15 @@
                 <td>{{ entity.libelle }}</td>
                 <td>{{ entity.illustration }}</td>
                 <td>{{ entity.duree | date('H:i:s') }}</td>
-                <td>{% if entity.date %}{{ entity.date|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{% if entity.date %}{{ entity.date|date('d/m/Y H:i:s') }}{% endif %}</td>
+                <td>{{ entity.reponses|length }}</td>
                 <td>                    
                 <ul class="nav nav-tabs">
                     <li>
-                        <a class="btn" href="{{ path('question_show', { 'id': entity.id }) }}">Voir <i class="icon-align-justify"></i></a>
+                        <a class="btn" href="{{ path('question_show', { 'id': entity.id, 'qcm': qcm.id }) }}">Voir <i class="icon-align-justify"></i></a>
                     </li>
                     <li class="margin-left-small">
-                        <a class="btn" href="{{ path('question_edit', { 'id': entity.id }) }}">Modifier <i class="icon-edit"></i></a>
+                        <a class="btn" href="{{ path('question_edit', { 'id': entity.id, 'qcm': qcm.id }) }}">Modifier <i class="icon-edit"></i></a>
                     </li>
                 </ul>                    
                 </td>
@@ -52,9 +54,14 @@
         </tbody>
     </table>
 
-        <ul class="inline">
+    <ul class="inline">
         <li>
-            <a class="btn" href="{{ path('question_new') }}">
+            <a class="btn" href="{{ path('qcm') }}">
+                <i class="icon-chevron-left"></i> Retour à la liste des QCM
+            </a>
+        </li>
+        <li>
+            <a class="btn" href="{{ path('question_new', { 'qcm': qcm.id }) }}">
                 Ajouter une question <i class="icon-chevron-right"></i>
             </a>
         </li>
