--- a/src/Msp/FrontendBundle/Resources/views/User/eleve.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/User/eleve.html.twig
@@ -1,7 +1,7 @@
-{% extends "MspFrontendBundle::user-layout.html.twig" %}
+{% extends "MspFrontendBundle::eleve-layout.html.twig" %}
 
 {# Le titre de la page (defaut MathSup) #}
-{% block title %}COMPTE | {{ parent() }}{% endblock %}
+{% block title %}ELEVE {{ app.user.prenom }} {{ app.user.nom }}| {{ parent() }}{% endblock %}
 {# La description de la page (defaut vide) #}
 {% block description %}{% endblock %}
 {# Les mots clés de la page (defaut vide) #}
@@ -10,10 +10,10 @@
 {% block robots %}noindex, nofollow{% endblock %}
 
 {# Le titre de l'entête du document #}
-{% block entetetitle %}COMPTE | {{ parent() }}{% endblock %}
+{% block entetetitle %}ELEVE {{ app.user.prenom }} {{ app.user.nom }}| {{ parent() }}{% endblock %}
 {# La barre latéralke de la page #}
 {% block aside %}{{ parent() }}{% endblock %}
 {# Le contenu de la page #}
-{% block body %}    
-        <h1>COMPTE</h1>
+{% block body %}
+    <h1>ELEVE {{ app.user.prenom }} {{ app.user.nom }}</h1>
 {% endblock %}
