--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,3 +1,41 @@
 /*  HERE TO ADDING MORE STYLE WITH BOOSTRAP */
 h1.titre{font-size: 12px; line-height: 12px;}
 
+.margin-left-small{margin-left: 5px;}
+.margin-left-medium{margin-left: 10px;}
+.margin-left-large{margin-left: 20px;}
+
+.margin-right-small{margin-right: 5px;}
+.margin-right-medium{margin-right: 10px;}
+.margin-right-large{margin-right: 20px;}
+
+.margin-small{margin: 5px;}
+.margin-medium{margin: 10px;}
+.margin-large{margin: 20px;}
+
+.padding-left-small{padding-left: 5px;}
+.padding-left-medium{padding-left: 10px;}
+.padding-left-large{padding-left: 20px;}
+
+.padding-right-small{padding-right: 5px;}
+.padding-right-medium{padding-right: 10px;}
+.padding-right-large{padding-right: 20px;}
+
+.padding-small{padding: 5px;}
+.padding-medium{padding: 10px;}
+.padding-large{padding: 20px;}
+
+#msp_frontendbundle_questiontype_reponses > div 
+{  
+  padding: 10px;
+  margin-bottom: 10px;
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 30px;
+  color: inherit;
+  background-color: #eeeeee;
+  -webkit-border-radius: 6px;
+     -moz-border-radius: 6px;
+          border-radius: 6px;
+}
+
